--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -22,6 +22,7 @@
     "fgt-mica-luminosity": "hsl(0, 0%, 20%)",
     "fgt-mica-brightness": "brightness(30%)"
   },
+  "additionalStyle": [],
   "opacity": {
     "selection": 1,
     "border": 0.4,
