--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ name: Publish VS Code Extension
 # Controls when the workflow will run
 on:
   push:
-    branches: [master]
+    branches: [release]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
