--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,7 @@ jobs:
 
       - name: Package
         run: vsce package
+
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./*.vsix
