--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -34,6 +34,7 @@
     "menu": "var(--fgt-animation-curve) fgtDropdown",
     "dialog": "var(--fgt-animation-curve) fgtZoomIn",
     "dropdown": "var(--fgt-animation-curve) fgtDropdown",
+    "hover": "none"
   },
   "revealEffect": {
     "enabled": true,
