--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "publisher": "RichardLuo",
   "description": "Bring frosted glass menu (like windows acrylic or mac os) to your vscode!",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/RichardLuo0/vscode-frosted-glass-theme"
@@ -230,7 +230,7 @@
           "frosted-glass-theme.animation.hover": {
             "type": "string",
             "default": "none",
-            "markdownDescription": "CSS animation for editor widget. Set to blank or `none` to disable the animation."
+            "markdownDescription": "CSS animation for hover. Set to blank or `none` to disable the animation."
           }
         }
       },
