--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,8 @@ name: Publish VS Code Extension
 on:
   push:
     branches: [release]
+    paths-ignore:
+      - "theme/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
