--- a/package.json
+++ b/package.json
@@ -88,7 +88,11 @@
             "type": "object",
             "order": 0,
             "default": {
-              "default": "url(#fgt-acrylic-{key})",
+              "default": {
+                "filter": "saturate(var(--fgt-saturate)) url(#fgt-acrylic-{key})",
+                "disableBackgroundColor": true,
+                "opacity": 0.4
+              },
               "minimap": "blur(30px)",
               "decorationsOverviewRuler": "blur(30px)",
               "terminalOverlay": "blur(30px)"
@@ -126,7 +130,7 @@
             "default": [
               "../resource/mica.svg"
             ],
-            "description": "The svg that gets loaded on start. No tint (ie. no element current background info).",
+            "description": "The svgs that load on start. No tint (ie. no element current background info).",
             "items": {
               "type": "string"
             }
@@ -137,7 +141,7 @@
             "default": [
               "../resource/acrylic.svg"
             ],
-            "markdownDescription": "The tint svg that gets loaded on start. `--fgt-current-background` indicts current element background color.",
+            "markdownDescription": "The tint svgs that load on start. `--fgt-current-background` indicts current element background color.",
             "items": {
               "type": "string"
             }
@@ -146,10 +150,12 @@
             "type": "object",
             "order": 4,
             "default": {
+              "fgt-saturate": "120%",
               "fgt-luminosity-opacity": "45%",
               "fgt-mica-luminosity": "hsl(0, 0%, 80%)",
               "fgt-mica-brightness": "",
-              "fgt-animation-curve": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards"
+              "fgt-animation-curve": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards",
+              "fgt-revealEffect-lightColor": "#00000014"
             },
             "description": "CSS variable. You may use them in settings and svg.",
             "patternProperties": {
@@ -164,7 +170,8 @@
             "default": {
               "fgt-luminosity-opacity": "85%",
               "fgt-mica-luminosity": "hsl(0, 0%, 20%)",
-              "fgt-mica-brightness": "brightness(30%)"
+              "fgt-mica-brightness": "brightness(30%)",
+              "fgt-revealEffect-lightColor": "#ffffff14"
             },
             "description": "CSS variable in dark mode. You may use them in settings and svg.",
             "patternProperties": {
@@ -235,38 +242,103 @@
         }
       },
       {
-        "title": "Reveal Effect",
+        "title": "Effect",
         "properties": {
-          "frosted-glass-theme.revealEffect.enabled": {
-            "type": "boolean",
-            "default": true,
+          "frosted-glass-theme.effect.enabled": {
+            "type": "object",
+            "default": {
+              "menu": "fgt-revealEffect",
+              "button": "fgt-revealEffect, fgt-flipEffect",
+              "tab": "fgt-revealEffect",
+              "list": "fgt-revealEffect",
+              "statusbar": "fgt-revealEffect",
+              "activitybar": "fgt-revealEffect"
+            },
             "order": 0,
-            "description": "Enable reveal effect."
+            "description": "Enable effect.",
+            "patternProperties": {
+              ".*": {
+                "type": "string"
+              }
+            }
           },
-          "frosted-glass-theme.revealEffect.opacity": {
-            "type": "number",
-            "default": 0.1,
-            "markdownDescription": "Reveal effect gradient opacity. The color can be controlled by `menu.selectionBackground` inside `#workbench.colorCustomizations#`."
+          "frosted-glass-theme.effect.revealEffect": {
+            "type": "object",
+            "default": {
+              "lightColor": "var(--fgt-revealEffect-lightColor)",
+              "gradientSize": "100%",
+              "clickEffect": {
+                "size": 40,
+                "speed": 0.8
+              },
+              "focusBackground": {
+                "color": "var(--fgt-revealEffect-lightColor)"
+              }
+            },
+            "description": "Reveal effect config.",
+            "properties": {
+              "lightColor": {
+                "type": "string"
+              },
+              "gradientSize": {
+                "type": [
+                  "number",
+                  "string"
+                ],
+                "description": "A number in px or a string type percentage ends with %."
+              },
+              "clickEffect": {
+                "type": [
+                  "object",
+                  "null"
+                ],
+                "properties": {
+                  "size": {
+                    "type": [
+                      "number",
+                      "string"
+                    ],
+                    "description": "A number in px or a string type percentage ends with %."
+                  },
+                  "speed": {
+                    "type": "number"
+                  }
+                }
+              },
+              "focusBackground": {
+                "type": [
+                  "object",
+                  "null"
+                ],
+                "description": "Menu focused item background.",
+                "properties": {
+                  "color": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           },
-          "frosted-glass-theme.revealEffect.gradientSize": {
-            "type": "number",
-            "default": 200,
-            "description": "Reveal effect gradient size."
+          "frosted-glass-theme.effect.flipEffect": {
+            "type": "object",
+            "default": {
+              "degree": 10,
+              "transition": "var(--fgt-animation-curve)"
+            },
+            "description": "Flip effect config.",
+            "properties": {
+              "degree": {
+                "type": "number"
+              },
+              "transition": {
+                "type": "string"
+              }
+            }
           },
-          "frosted-glass-theme.revealEffect.clickEffect": {
-            "type": "boolean",
-            "default": true,
-            "description": "Enable click effect."
-          },
-          "frosted-glass-theme.revealEffect.focusBackground": {
-            "type": "boolean",
-            "default": true,
-            "description": "Enable background for focused menu items."
-          },
-          "frosted-glass-theme.revealEffect.disableForDisabledItem": {
+          "frosted-glass-theme.effect.disableForDisabledItem": {
             "type": "boolean",
             "default": false,
-            "description": "Disable reveal effect for disabled menu item."
+            "description": "Disable effect for disabled menu item."
           }
         }
       },
@@ -307,7 +379,7 @@
           },
           "frosted-glass-theme.fakeMica.filter": {
             "type": "string",
-            "default": "url(#fgt-mica) var(--fgt-mica-brightness)",
+            "default": "saturate(var(--fgt-saturate)) url(#fgt-mica) var(--fgt-mica-brightness)",
             "description": "The filter used for fake mica background.",
             "order": 2
           },
@@ -368,7 +440,6 @@
   },
   "dependencies": {
     "@vscode/sudo-prompt": "^9.3.1",
-    "fluent-reveal-effect": "^3.0.11",
     "uuid": "^10.0.0"
   }
 }
