--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -21,12 +21,14 @@
     "fgt-luminosity-opacity": "45%",
     "fgt-mica-luminosity": "hsl(0, 0%, 80%)",
     "fgt-mica-brightness": "",
-    "fgt-animation-curve": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards"
+    "fgt-animation-curve": "300ms cubic-bezier(0, 0.8, 0.2, 1)",
+    "fgt-revealEffect-lightColor": "#00000014"
   },
   "variableDark": {
     "fgt-luminosity-opacity": "85%",
     "fgt-mica-luminosity": "hsl(0, 0%, 20%)",
-    "fgt-mica-brightness": "brightness(30%)"
+    "fgt-mica-brightness": "brightness(30%)",
+    "fgt-revealEffect-lightColor": "#ffffff14"
   },
   "additionalStyle": [],
   "opacity": {
@@ -41,12 +43,30 @@
     "dropdown": "var(--fgt-animation-curve) fgtDropdown",
     "hover": ""
   },
-  "revealEffect": {
-    "enabled": true,
-    "opacity": 0.1,
-    "gradientSize": 200,
-    "clickEffect": true,
-    "focusBackground": true,
+  "effect": {
+    "enabled": {
+      "menu": "fgt-revealEffect",
+      "button": "fgt-revealEffect, fgt-flipEffect",
+      "tab": "fgt-revealEffect",
+      "list": "fgt-revealEffect",
+      "statusbar": "fgt-revealEffect",
+      "activitybar": "fgt-revealEffect"
+    },
+    "revealEffect": {
+      "lightColor": "var(--fgt-revealEffect-lightColor)",
+      "gradientSize": "100%",
+      "clickEffect": {
+        "size": 40,
+        "speed": 0.8
+      },
+      "focusBackground": {
+        "color": "var(--fgt-revealEffect-lightColor)"
+      }
+    },
+    "flipEffect": {
+      "degree": 10,
+      "transition": "var(--fgt-animation-curve)"
+    },
     "disableForDisabledItem": false
   },
   "borderRadius": {
