--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -67,6 +67,7 @@
       "degree": 10,
       "transition": "var(--fgt-animation-curve)"
     },
+    "disableMenuFocusBackground": true,
     "disableForDisabledItem": false
   },
   "borderRadius": {
