--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -50,7 +50,7 @@
       "tab": "fgt-revealEffect",
       "listItem": "fgt-revealEffect",
       "statusbarItem": "fgt-revealEffect",
-      "activitybar": "fgt-revealEffect",
+      "activitybarItem": "fgt-revealEffect",
       "commandCenter": "fgt-revealEffect",
       "titlebarButton": "fgt-flipEffect"
     },
