feat: add notificationCenterHeader and notification

--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -42,7 +42,9 @@
     "dialog": "var(--fgt-animation-curve) fgtZoomIn",
     "dropdown": "var(--fgt-animation-curve) fgtDropdown",
     "hover": "",
-    "notificationCenter": "var(--fgt-animation-curve) fgtFlyout, fgt-revealEffect",
+    "notificationCenter": "var(--fgt-animation-curve) fgtFlyout, fgt-flipEffect",
+    "notificationCenterHeader": "fgt-revealEffect",
+    "notification": "",
     "menuItem": "fgt-revealEffect",
     "button": "fgt-revealEffect, fgt-flipEffect",
     "tab": "fgt-revealEffect",
