--- a/package.json
+++ b/package.json
@@ -226,7 +226,9 @@
               "dialog": "var(--fgt-animation-curve) fgtZoomIn",
               "dropdown": "var(--fgt-animation-curve) fgtDropdown",
               "hover": "",
-              "notificationCenter": "var(--fgt-animation-curve) fgtFlyout, fgt-revealEffect",
+              "notificationCenter": "var(--fgt-animation-curve) fgtFlyout, fgt-flipEffect",
+              "notificationCenterHeader": "fgt-revealEffect",
+              "notification": "",
               "menuItem": "fgt-revealEffect",
               "button": "fgt-revealEffect, fgt-flipEffect",
               "tab": "fgt-revealEffect",
