chore: change default value

--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -41,16 +41,16 @@
     "menu": "var(--fgt-animation-curve) fgtDropdown",
     "dialog": "var(--fgt-animation-curve) fgtZoomIn",
     "dropdown": "var(--fgt-animation-curve) fgtDropdown",
-    "hover": "",
+    "hover": "var(--fgt-animation-curve) fgtDropdown",
     "notificationCenter": "var(--fgt-animation-curve) fgtFlyout, fgt-flipEffect",
     "notificationCenterHeader": "fgt-revealEffect",
     "notification": "",
-    "menuItem": "fgt-revealEffect",
+    "menuItem": "fgt-revealEffect, fgt-flipEffect",
     "button": "fgt-revealEffect, fgt-flipEffect",
-    "tab": "fgt-revealEffect",
-    "listItem": "fgt-revealEffect",
-    "statusbarItem": "fgt-revealEffect",
-    "activitybarItem": "fgt-revealEffect",
+    "tab": "fgt-revealEffect, fgt-flipEffect",
+    "listItem": "fgt-revealEffect, fgt-flipEffect",
+    "statusbarItem": "fgt-revealEffect, fgt-flipEffect",
+    "activitybarItem": "fgt-revealEffect, fgt-flipEffect",
     "commandCenter": "fgt-revealEffect",
     "titlebarButton": "fgt-flipEffect",
     "settingsTreeItem": "fgt-revealEffect"
