--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -90,6 +90,7 @@
     "editorBackgroundFix": true
   },
   "miscellaneous": {
-    "progressBarBehindSectionHeader": false
+    "progressBarBehindSectionHeader": false,
+    "disableFocusOutline": false
   }
 }
