--- a/inject/config.json
+++ b/inject/config.json
@@ -3,7 +3,7 @@
     "default": {
       "filter": "saturate(var(--fgt-saturate)) url(#fgt-acrylic-{key})",
       "disableBackgroundColor": true,
-      "opacity": 0.4
+      "opacity": 0.6
     },
     "minimap": "blur(30px)",
     "decorationsOverviewRuler": "blur(30px)",
@@ -90,6 +90,7 @@
     "editorBackgroundFix": true
   },
   "miscellaneous": {
-    "progressBarBehindSectionHeader": false
+    "progressBarBehindSectionHeader": false,
+    "disableFocusOutline": false
   }
 }
